log/build_2025-03-05_11-52-26/my_py_pkg/stderr.log
  File "/home/abhilash-ts434/Documents/ros2_ws/install/my_py_pkg/lib/python3.10/site-packages/my_py_pkg/number_counter.py", line 28
    if request.data = True:
       ^^^^^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?

